--- a/README.Rmd
+++ b/README.Rmd
@@ -14,36 +14,12 @@ knitr::opts_chunk$set(
 ```
 # RAmibroker
 
-The goal of RAmibroker is to ...
+The goal of RAmibroker provides API to import data exported from Amibroker database.
 
 ## Installation
 
 You can install the released version of RAmibroker from [CRAN](https://CRAN.R-project.org) with:
 
 ``` r
-install.packages("RAmibroker")
+devtools::install_github("thanhuwe8/RAmibroker")
 ```
-
-## Example
-
-This is a basic example which shows you how to solve a common problem:
-
-```{r example}
-## basic example code
-```
-
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
-
-```{r cars}
-summary(cars)
-```
-
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date.
-
-You can also embed plots, for example:
-
-```{r pressure, echo = FALSE}
-plot(pressure)
-```
-
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub!
